--- a/assets/css/pages/connect.styl
+++ b/assets/css/pages/connect.styl
@@ -1,4 +1,4 @@
-.connect-connect
+.connect.ui-page
    background: url(../images/Pattern_FabricKnit.png)
    background-size: 4px 4px
    .ui-content
@@ -7,5 +7,5 @@
       margin: 0
 
 @media only screen and (-webkit-min-device-pixel-ratio: 1.5)
-   .connect-connect
+   .connect
       background-image: url(../images/Pattern_FabricKnit@2x.png)
