--- a/assets/css/pages/leaderboard.styl
+++ b/assets/css/pages/leaderboard.styl
@@ -1,7 +1,7 @@
 @import "../lib/variables"
 @import "../lib/mixins"
 
-.leaderboard-leaderboard
+.leaderboard.ui-page
    background: url(../images/Pattern_FabricKnit.png)
    background-size: 4px 4px
    .ui-content
