--- a/assets/css/pages/points.styl
+++ b/assets/css/pages/points.styl
@@ -1,7 +1,7 @@
 @import "../lib/mixins"
 @import "../lib/variables"
 
-.points-points
+.points.ui-page
    background: url(../images/Pattern_FabricKnit.png)
    background-size: 4px 4px
    .ui-content
