--- a/views/layout.jade
+++ b/views/layout.jade
@@ -6,7 +6,7 @@ html
       meta(name="viewport", content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no")
       meta(name="apple-mobile-web-app-capable", content="yes")
 
-      if (css)
+      if (global.css)
          != css("lib/normalize")
          link(rel="stylesheet", href="http://code.jquery.com/mobile/1.2.0/jquery.mobile-1.2.0.min.css")
          != css("lib/fannect")
@@ -18,7 +18,7 @@ html
          link(rel="stylesheet", href="css/fannect.css")
          link(rel="stylesheet", href="css/skin.css")
 
-      if (js)
+      if (global.js)
          != js("tree")
 
    - var viewDir = locals.settings.views;
@@ -36,8 +36,8 @@ html
          .footer(data-role="footer", data-id="footer", data-position="fixed")
             div(data-role="navbar")
                ul
-                  li: a.profile-menu(href="profile.html", data-icon="custom") Profile
-                  li: a.points-menu(href="/points", data-icon="custom") Points
-                  li: a.leaderboard-menu(href="/leaderboard", data-icon="custom") Leaderboard
-                  li: a.connect-menu(href="/connect", data-icon="custom") Connect
-                  li: a.preferences-menu(href="/preferences", data-icon="custom", data-prefetch="true") Preferences
+                  li: a.profile-menu(href="profile.html", data-icon="custom", data-prefetch="true") Profile
+                  li: a.points-menu(href="points.html", data-icon="custom", data-prefetch="true") Points
+                  li: a.leaderboard-menu(href="leaderboard.html", data-icon="custom", data-prefetch="true") Leaderboard
+                  li: a.connect-menu(href="connect.html", data-icon="custom", data-prefetch="true") Connect
+                  li: a.preferences-menu(href="preferences.html", data-icon="custom", data-prefetch="true") Preferences
