--- a/assets/css/skin.styl
+++ b/assets/css/skin.styl
@@ -72,7 +72,7 @@
       margin-left: -24px
    .profile-menu .ui-icon
       background-position: -159px 0
-   .points-menu .ui-icon
+   .games-menu .ui-icon
       background-position: -106px 0
    .leaderboard-menu .ui-icon
       background-position: -53px 0
@@ -238,7 +238,7 @@
       background-image: url(../images/icons/icons-gamecell@2x.png)
 
 @import "pages/profile"
-@import "pages/points"
+@import "pages/games"
 @import "pages/leaderboard"
 @import "pages/connect"
 @import "pages/preferences"
