--- a/views/layout.jade
+++ b/views/layout.jade
@@ -37,7 +37,7 @@ html
             div(data-role="navbar")
                ul
                   li: a.profile-menu(href="profile.html", data-icon="custom", data-prefetch="true") Profile
-                  li: a.points-menu(href="points.html", data-icon="custom", data-prefetch="true") Points
+                  li: a.games-menu(href="games.html", data-icon="custom", data-prefetch="true") Games
                   li: a.leaderboard-menu(href="leaderboard.html", data-icon="custom", data-prefetch="true") Leaderboard
                   li: a.connect-menu(href="connect.html", data-icon="custom", data-prefetch="true") Connect
                   li: a.preferences-menu(href="preferences.html", data-icon="custom", data-prefetch="true") Preferences
