--- a/views/games.jade
+++ b/views/games.jade
@@ -1,31 +1,31 @@
 extend layout
 
 block header
-   h1(data-menu-root="points") Points
+   h1(data-menu-root="games") Games
 
 block content
    ul.pattern-bg(data-role="listview")
       li
-         a(href="/points/guessTheScore", data-transition="slide")
+         a(href="/games-guessTheScore", data-transition="slide")
             .icon.gamecell.guess-the-score
             .text
                .inner
                   span.game-name Guess The Score
       li
-         a(href="/points/attendanceStreak", data-transition="slide")
+         a(href="/games-attendanceStreak", data-transition="slide")
             .icon.gamecell.attendance-streak
             .text
                .inner
                   span.game-name Attendance Streak
       li
 
-         a(href="/points/gameFace", data-transition="slide")
+         a(href="/games-gameFace", data-transition="slide")
             .icon.gamecell.game-face
             .text
                .inner
                   span.game-name Gameface
       li
-         a(href="/points/suggestGame")
+         a(href="/games-suggestGame")
             .icon.gamecell.attendance-streak
             .text
                .inner
