--- a/views/games/attendanceStreak.jade
+++ b/views/games/attendanceStreak.jade
@@ -1,8 +1,8 @@
 extend ../layout
 
 block header
-   a(href="/points", data-icon="back", data-rel="back") Back
-   h1(data-menu-root="points") Games
+   a(href="games", data-icon="back", data-rel="back") Back
+   h1(data-menu-root="games") Games
 
 block content
    
