Gapified game face.

--- a/assets/css/pages/games.styl
+++ b/assets/css/pages/games.styl
@@ -254,6 +254,8 @@
          text-align: center
          font-size: 1.4em
          color: color-light-gray
+   .unavailable.scrolling-text
+      margin-bottom: 20px
    .switch-wrap
       margin-top: 10px
       text-align: center
