--- a/views/games.jade
+++ b/views/games.jade
@@ -6,26 +6,26 @@ block header
 block content
    ul.pattern-bg(data-role="listview")
       li
-         a(href="/games-guessTheScore", data-transition="slide")
+         a(href="games-guessTheScore.html", data-transition="slide")
             .icon.gamecell.guess-the-score
             .text
                .inner
                   span.game-name Guess The Score
       li
-         a(href="/games-attendanceStreak", data-transition="slide")
+         a(href="games-attendanceStreak.html", data-transition="slide")
             .icon.gamecell.attendance-streak
             .text
                .inner
                   span.game-name Attendance Streak
       li
 
-         a(href="/games-gameFace", data-transition="slide")
+         a(href="games-gameFace.html", data-transition="slide")
             .icon.gamecell.game-face
             .text
                .inner
                   span.game-name Gameface
       li
-         a(href="/games-suggestGame")
+         a(href="games-suggestGame.html")
             .icon.gamecell.attendance-streak
             .text
                .inner
