--- a/views/layout.jade
+++ b/views/layout.jade
@@ -21,6 +21,11 @@ html
       if (global.js)
          != js("tree")
 
+      else
+         script(src="phonegap.js")
+         script(src="js/tree.js")
+
+
    - var viewDir = locals.settings.views;
    - var view = locals.filename.replace(viewDir, "").replace(".jade", "").replace(/^[\\\/]/g, "");
    - var viewClass = view.replace(/[\\\/]/g, "-");
