Gapified Guess The Score game.

--- a/assets/css/pages/games.styl
+++ b/assets/css/pages/games.styl
@@ -173,12 +173,13 @@
          min-height: 36px
          margin 0 auto
          padding-top: 7px
-      .title
-         text-align: center
-         color: color-light-gray
+         .title
+            text-align: center
+            color: color-light-gray
+         .text
+            margin-top: 24px
+            font-size: .8em
 
-
-.games-guessTheScore
 .games-guessTheScore
 .games-gameFace
    .ui-content
@@ -196,42 +197,30 @@
          background: url(../images/games/Overlay_VsButton.png) no-repeat 50% 0%
          background-size: 36px 36px
 
-.games-guessTheScore
-   .picked
-      margin: 10px auto 0
-      width: 320px
+// .games-guessTheScore
+//    .picked
+//       margin: 10px auto 0
+//       width: 320px
 
-      .guessed
-         float: left
-         width: 50%
-         text-align: center
-         color: color-light-gray
-         text-shadow: 0 0.13em  #000
-         .score
-            font-family: JerseyM54, Helvetica, Arial, sans-serif
-            font-size: 5.0em
-            margin: 8px 0 0 0
-            background: url(../images/games/guessTheScore/Overlay_PickSetBox.png)
-            background-size: 129px 107px
-            width: 129px
-            height: 107px
-            line-height: 107px
-         &.home .score
-            margin-left: 10px
-         &.away .score
-            margin-left: 21px
-
-   .game-preview
-      background: url(../images/games/guessTheScore/Overlay_SubtleShadow.png) 50% -24px no-repeat
-      background-size: 290px 60px
-      width: 290px
-      min-height: 36px
-      margin 0 auto
-      padding-top: 7px
-
-      .title
-         text-align: center
-         color: color-light-gray
+//       .guessed
+//          float: left
+//          width: 50%
+//          text-align: center
+//          color: color-light-gray
+//          text-shadow: 0 0.13em  #000
+//          .score
+//             font-family: JerseyM54, Helvetica, Arial, sans-serif
+//             font-size: 5.0em
+//             margin: 8px 0 0 0
+//             background: url(../images/games/guessTheScore/Overlay_PickSetBox.png)
+//             background-size: 129px 107px
+//             width: 129px
+//             height: 107px
+//             line-height: 107px
+//          &.home .score
+//             margin-left: 10px
+//          &.away .score
+//             margin-left: 21px
 
 .games-gameFace
    .game-face
@@ -273,27 +262,21 @@
          background-image: url(../images/games/attendanceStreak/Overlay_MarqueeCap_Right_iPhone@2x.png)
 
    .games-attendanceStreak .bottom
-      background-image: url(../images/games/attendanceStreak/Overlay_ButtonHolder_iPhone@2x.png)
+      background-image: url(../images/games/attendanceStreak/Overlay_ButtonHolder_iPhone@2x.png)!important
       .checked-in
-         background-image: url(../images/games/attendanceStreak/Overlay_checkbox@2x.png)
+         background-image: url(../images/games/attendanceStreak/Overlay_checkbox@2x.png)!important
 
    .games-guessTheScore
       .guess-wrap
-         background-image: url(../images/games/guessTheScore/Overlay_PickSetBox@2x.png)
+         background-image: url(../images/games/guessTheScore/Overlay_PickSetBox@2x.png)!important
       .game-preview
-         background-image: url(../images/games/guessTheScore/Overlay_SubtleShadow@2x.png)
+         background-image: url(../images/games/guessTheScore/Overlay_SubtleShadow@2x.png)!important
 
    .games-attendanceStreak
    .games-guessTheScore
    .games-gameFace
          .vs
             background-image: url(../images/games/Overlay_VsButton@2x.png)
-
-   .games-guessTheScore
-      .score
-         background-image: url(../images/games/guessTheScore/Overlay_PickSetBox@2x.png)
-      .game-preview
-         background-image: url(../images/games/guessTheScore/Overlay_SubtleShadow@2x.png)
 
    .games-gameFace
       .game-face
