--- a/views/profile/selectLeague.jade
+++ b/views/profile/selectLeague.jade
@@ -6,5 +6,5 @@ block header
 
 block content
    ul(data-role="listview")
-      each league in leagues
-         li: a(href="/profile/selectTeam?league=#{league}") #{prettyCamel(league)}
+      //- each league in leagues
+      //-    li: a(href="/profile/selectTeam?league=#{league}") #{prettyCamel(league)}
