--- a/views/profile/selectSport.jade
+++ b/views/profile/selectSport.jade
@@ -6,5 +6,5 @@ block header
 
 block content
    ul(data-role="listview")
-      each sport in sports
-         li: a(href="/profile/selectLeague?sport=#{sport}") #{prettyCamel(sport)}
+      //- each sport in sports
+      //-    li: a(href="/profile/selectLeague?sport=#{sport}") #{prettyCamel(sport)}
