--- a/views/profile/selectTeam.jade
+++ b/views/profile/selectTeam.jade
@@ -6,5 +6,5 @@ block header
 
 block content
    ul(data-role="listview", data-filter="true", data-filter-theme="b")
-      each team in teams
-         li: a(href="/profile?team=#{team}") #{prettyCamel(team)}
+      //- each team in teams
+      //-    li: a(href="/profile?team=#{team}") #{prettyCamel(team)}
