--- a/views/layout.jade
+++ b/views/layout.jade
@@ -41,8 +41,8 @@ html
          .footer(data-role="footer", data-id="footer", data-position="fixed")
             div(data-role="navbar")
                ul
-                  li: a.profile-menu(href="profile.html", data-icon="custom", data-prefetch="true") Profile
-                  li: a.games-menu(href="games.html", data-icon="custom", data-prefetch="true") Games
-                  li: a.leaderboard-menu(href="leaderboard.html", data-icon="custom", data-prefetch="true") Leaderboard
-                  li: a.connect-menu(href="connect.html", data-icon="custom", data-prefetch="true") Connect
-                  li: a.preferences-menu(href="preferences.html", data-icon="custom", data-prefetch="true") Preferences
+                  li: a.profile-menu(href="profile.html", data-icon="custom") Profile
+                  li: a.games-menu(href="games.html", data-icon="custom") Games
+                  li: a.leaderboard-menu(href="leaderboard.html", data-icon="custom") Leaderboard
+                  li: a.connect-menu(href="connect.html", data-icon="custom") Connect
+                  li: a.preferences-menu(href="preferences.html", data-icon="custom") Preferences
