--- a/views/layout.jade
+++ b/views/layout.jade
@@ -5,6 +5,8 @@ html
       meta(http-equiv="X-UA-Compatible", content="IE=edge,chrome=1")
       meta(name="viewport", content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no")
       meta(name="apple-mobile-web-app-capable", content="yes")
+      link(rel="apple-touch-icon-precomposed", sizes="114x114", href="/res/icon-114.png")
+      link(rel="apple-touch-icon-precomposed", sizes="72x72", href="/res/icon-72.png")
 
       if (global.css)
          != css("lib/normalize")
