Fixed JS to working when compiled down.

--- a/assets/css/skin.styl
+++ b/assets/css/skin.styl
@@ -3,12 +3,9 @@
 
 // Layout
 
-// .ui-page
-//    background: url(../images/Background_PerforatedMetal@2x.png)
-
 @font-face
    font-family: JerseyM54
-   src: url(/fonts/JerseyM54.ttf)
+   src: url(../fonts/JerseyM54.ttf)
 
 .clear
    clear: both
