--- a/views/layout.jade
+++ b/views/layout.jade
@@ -5,8 +5,8 @@ html
       meta(http-equiv="X-UA-Compatible", content="IE=edge,chrome=1")
       meta(name="viewport", content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no")
       meta(name="apple-mobile-web-app-capable", content="yes")
-      link(rel="apple-touch-icon-precomposed", sizes="114x114", href="/res/icon-114.png")
-      link(rel="apple-touch-icon-precomposed", sizes="72x72", href="/res/icon-72.png")
+      link(rel="apple-touch-icon-precomposed", sizes="114x114", href="res/icon-114.png")
+      link(rel="apple-touch-icon-precomposed", sizes="72x72", href="res/icon-72.png")
 
       if (global.css)
          != css("lib/normalize")
@@ -16,7 +16,7 @@ html
 
       else
          link(rel="stylesheet", href="css/lib/normalize.css")
-         link(rel="stylesheet", href="css/lib/jquerymobile")
+         link(rel="stylesheet", href="css/lib/jquerymobile.css")
          link(rel="stylesheet", href="css/lib/fannect.css")
          link(rel="stylesheet", href="css/skin.css")
 
@@ -24,7 +24,7 @@ html
          != js("tree")
 
       else
-         script(src="phonegap.js")
+         //- script(src="phonegap.js")
          script(src="js/tree.js")
 
    - var viewDir = locals.settings.views;
