Removed dependency on overflow-y:auto for wider support (Android 2.3)

--- a/assets/css/pages/connect.styl
+++ b/assets/css/pages/connect.styl
@@ -3,8 +3,8 @@
    background-size: 4px 4px
    .ui-content
       padding: 0
-   .fans
-      margin: 0
+    .fans
+      margin: -15px 0 0 0
 
 @media only screen and (-webkit-min-device-pixel-ratio: 1.5)
    .connect
