--- a/assets/css/pages/leaderboard.styl
+++ b/assets/css/pages/leaderboard.styl
@@ -9,26 +9,29 @@
    .scrollable-content
       top: header-height + 42
    .switcher
-      position: relative
+      position: fixed
       text-align: center
       dropshadow: 0 2px 3px rgba(0,0,0,.5)
       z-index: 200
-      margin-bottom: 5px
-   .fans
-      margin: 0
-      .rank
-         position: absolute
-         right: 8px
-         top: 26px 
-         background: url(../images/leaderboard/Overlay_LeaderboardRank.png)
-         background-size: 27px 28px
-         width: 27px
-         height: 28px
-         font-family: JerseyM54, Helvetica, Arial, sans-serif
-         text-align: center
-         font-size: 1.2em
-         line-height: 28px
-         color: color-dark-red
+      width: 100%
+      margin-top: -15px
+   .fans-lists
+      padding-top: header-height - 15
+      .fans
+         margin: 0
+         .rank
+            position: absolute
+            right: 8px
+            top: 26px 
+            background: url(../images/leaderboard/Overlay_LeaderboardRank.png)
+            background-size: 27px 28px
+            width: 27px
+            height: 28px
+            font-family: JerseyM54, Helvetica, Arial, sans-serif
+            text-align: center
+            font-size: 1.2em
+            line-height: 28px
+            color: color-dark-red
 
 @media only screen and (-webkit-min-device-pixel-ratio: 1.5)
    .leaderboard-leaderboard
