--- a/assets/css/pages/games.styl
+++ b/assets/css/pages/games.styl
@@ -29,6 +29,7 @@
 .games-attendanceStreak
    .ui-content
       padding: 0
+      margin-top: -15px
       .info
          margin: 0 auto
          max-width: 600px
