--- a/assets/css/skin.styl
+++ b/assets/css/skin.styl
@@ -12,7 +12,8 @@
    height: 1px
 
 .header
-   position: relative
+   position: fixed
+   width: 100%
    dropshadow: 0 2px 3px rgba(0,0,0,.5)
    z-index: 500
    .ui-btn-left
@@ -25,16 +26,6 @@
       font-size: 1.2em
       text-transform: uppercase
 
-.scrollable-content
-   position: absolute
-   top: header-height - 1
-   left: 0
-   right: 0
-   bottom: footer-height + 1
-   overflow-y: auto
-   overflow-x: hidden
-   -webkit-overflow-scrolling: touch
-
 .ui-page
    background: url(../images/Tilable-Background.png) 50% 0
    background-size: 50px 50px
@@ -42,6 +33,8 @@
 
 .ui-content
    overflow: hidden
+   -webkit-overflow-scrolling: touch
+   padding-top: header-height + 15!important
 
 .background-highlight
    position: absolute
