--- a/assets/css/pages/profile.styl
+++ b/assets/css/pages/profile.styl
@@ -65,7 +65,7 @@
          padding: 4px 0 14px 0
          margin: 0 10px
          overflow-y: hidden
-         overflow-x: auto
+         overflow-x: hidden
          .teams
             height: 52px
             white-space: nowrap
