Fixed issue with listviews not refreshing. Fixed header to use JQM to be fixed instead of custom styles.

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -33,7 +33,7 @@ html
    body
       div(class=viewClass, data-role="page", data-theme="a")
          .background-highlight
-         .header(data-role="header")
+         .header(data-role="header", data-position="fixed")
             block header
 
          .content(data-role="content")
