--- a/assets/css/pages/connect.styl
+++ b/assets/css/pages/connect.styl
@@ -4,7 +4,7 @@
    .ui-content
       padding: 0
     .fans
-      margin: -15px 0 0 0
+      margin: 0
 
 @media only screen and (-webkit-min-device-pixel-ratio: 1.5)
    .connect
