--- a/views/leaderboard.jade
+++ b/views/leaderboard.jade
@@ -2,8 +2,6 @@ extend layout
 
 block header
    h1(data-menu-root="leaderboard") Leaderboard
-
-block content
    .ui-bar-a.switcher
       fieldset(data-role="controlgroup", data-type="horizontal", data-mini="true")
          input(type="radio", name="board-picker", id="board-overall-picker", value="overall", checked="true", data-bind="checked: selected_view")
@@ -11,9 +9,12 @@ block content
          input(type="radio", name="board-picker", id="board-roster-picker", value="roster", data-bind="checked: selected_view")
          label(for="board-roster-picker") Roster
 
+block content
+   
+
    .fans-lists
-      ul.fans.pattern-bg(data-role="listview", data-bind="template: { name:'leaderboard-fan-template', foreach: overall_fans }, visible: is_overall_selected, listviewUpdate: overall_loaded")
-      ul.fans.pattern-bg(data-role="listview", data-bind="template: { name:'leaderboard-fan-template', foreach: roster_fans }, visible: !is_overall_selected(), listviewUpdate: roster_loaded")
+      ul.fans.pattern-bg(data-role="listview", data-bind="template: { name:'leaderboard-fan-template', foreach: overall_fans }, visible: is_overall_selected, listviewUpdate: overall_fans")
+      ul.fans.pattern-bg(data-role="listview", data-bind="template: { name:'leaderboard-fan-template', foreach: roster_fans }, visible: !is_overall_selected(), listviewUpdate: roster_fans")
 
    script(id="leaderboard-fan-template", type="text/html")
       li.fan(data-icon="false")
