--- a/assets/css/skin.styl
+++ b/assets/css/skin.styl
@@ -134,7 +134,7 @@
          height: 43px
          float: left
          border-radius: 5px
-         img
+         .profile-image
             width: 43px
             height: 43px
             border-radius: 5px
@@ -156,15 +156,6 @@
             font-weight: lighter
             margin: 3px 0 4px 0
             color: color-red
-      .data-wrap
-         font-size: .8em
-         padding-top: 4px
-         margin-bottom: -6px
-         .data
-            margin-right: 28px
-            .label
-               color: color-dark-gray
-               margin-right: 4px
 // Icons
 .icon
    &.settings
