Renamed preferences to settings.

--- a/assets/css/pages/games.styl
+++ b/assets/css/pages/games.styl
@@ -6,6 +6,11 @@
    background-size: 4px 4px
    .ui-content
       padding-left: 8px
+   .locked
+      // .ui-btn-inner.ui-li
+      //    background-lowlight()
+      // .chain
+      //    holder: true
    .icon
       float: left
    .text
