--- a/assets/css/skin.styl
+++ b/assets/css/skin.styl
@@ -219,6 +219,6 @@
 @import "pages/games"
 @import "pages/leaderboard"
 @import "pages/connect"
-@import "pages/preferences"
+@import "pages/settings"
 
 @import "lib/fixes"
