--- a/views/games.jade
+++ b/views/games.jade
@@ -18,15 +18,51 @@ block content
                .inner
                   span.game-name Attendance Streak
       li
-
          a(href="games-gameFace.html", data-transition="slide")
             .icon.gamecell.game-face
             .text
                .inner
                   span.game-name Gameface
-      li
-         a(href="games-suggestGame.html")
+      li.locked
+         a
+            .chain
             .icon.gamecell.attendance-streak
             .text
                .inner
-                  span.game-name Suggest A Game
+                  span.game-name Watch Party
+      li.locked
+         a
+            .chain
+            .icon.gamecell.attendance-streak
+            .text
+               .inner
+                  span.game-name Gameday Pics
+      li.locked
+         a
+            .chain
+            .icon.gamecell.attendance-streak
+            .text
+               .inner
+                  span.game-name Impact Players
+      li.locked
+         a
+            .chain
+            .icon.gamecell.attendance-streak
+            .text
+               .inner
+                  span.game-name Team Trivia
+      li.locked
+         a
+            .chain
+            .icon.gamecell.attendance-streak
+            .text
+               .inner
+                  span.game-name Tailgate King
+      li.locked
+         a
+            .chain
+            .icon.gamecell.attendance-streak
+            .text
+               .inner
+                  span.game-name Spirit Wear
+
