--- a/views/layout.jade
+++ b/views/layout.jade
@@ -46,4 +46,4 @@ html
                   li: a.games-menu(href="games.html", data-icon="custom") Games
                   li: a.leaderboard-menu(href="leaderboard.html", data-icon="custom") Leaderboard
                   li: a.connect-menu(href="connect.html", data-icon="custom") Connect
-                  li: a.preferences-menu(href="preferences.html", data-icon="custom") Preferences
+                  li: a.settings-menu(href="settings.html", data-icon="custom") Settings
