--- a/assets/css/pages/leaderboard.styl
+++ b/assets/css/pages/leaderboard.styl
@@ -1,7 +1,7 @@
 @import "../lib/variables"
 @import "../lib/mixins"
 
-.leaderboard.ui-page
+#leaderboard-page
    background: url(../images/Pattern_FabricKnit.png)
    background-size: 4px 4px
    .ui-content
@@ -30,7 +30,7 @@
             color: color-dark-red
 
 @media only screen and (-webkit-min-device-pixel-ratio: 1.5)
-   .leaderboard-leaderboard
+   #leaderboard-page
       background-image: url(../images/Pattern_FabricKnit@2x.png)
    .fans .rank
       background-image: url(../images/leaderboard/Overlay_LeaderboardRank@2x.png)
