--- a/assets/css/pages/profile.styl
+++ b/assets/css/pages/profile.styl
@@ -1,7 +1,7 @@
 @import "../lib/mixins"
 @import "../lib/variables"
 
-.profile.ui-page
+#profile-page
    .ui-content
       padding: 0 0 inherit 0
    .profile-images
