Renamed and reordered how javascript files are organized.

--- a/assets/css/pages/profile.styl
+++ b/assets/css/pages/profile.styl
@@ -2,8 +2,7 @@
 @import "../lib/variables"
 
 #profile-page
-   .ui-content
-      padding: 0 0 inherit 0
+#connect-profile-page
    .profile-images
       position: relative
       height: 250px
