--- a/views/settings/support.jade
+++ b/views/settings/support.jade
@@ -1,8 +1,8 @@
 extend ../layout
 
 block header
-   a(href="/preferences", data-icon="back", data-rel="back") Back
-   h1(data-menu-root="preferences") Support
+   a(href="settings", data-icon="back", data-rel="back") Back
+   h1(data-menu-root="settings") Support
 
 block content
    
