--- a/views/settings/aboutFannect.jade
+++ b/views/settings/aboutFannect.jade
@@ -1,7 +1,7 @@
 extend ../layout
 
 block header
-   a(href="/preferences", data-icon="back", data-rel="back") Back
-   h1(data-menu-root="preferences") Fannect
+   a(href="settings", data-icon="back", data-rel="back") Back
+   h1(data-menu-root="settings") Fannect
 
 block content
