--- a/views/settings/aboutRadeEccles.jade
+++ b/views/settings/aboutRadeEccles.jade
@@ -1,7 +1,7 @@
 extend ../layout
 
 block header
-   a(href="/preferences", data-icon="back", data-rel="back") Back
-   h1(data-menu-root="preferences") Rade | Eccles
+   a(href="settings", data-icon="back", data-rel="back") Back
+   h1(data-menu-root="settings") Rade | Eccles
 
 block content
