--- a/views/connect/addToRoster.jade
+++ b/views/connect/addToRoster.jade
@@ -1,18 +1,8 @@
 extend ../layout
 
 block header
-   h1(data-menu-root="connect") Connect
-   a.ui-btn-right(href="#", data-role="button", data-icon="plus") Add
+   h1(data-menu-root="connect") Add to Roster
+   a(href="connect.html", data-icon="back", data-rel="back") Back
 
 block content
    ul.pattern-bg(data-role="listview", data-theme="c", data-filter="true", data-bind="template: { name:'connect-fan-template', foreach: roster_fans }, listviewUpdate: roster_fans, visible: roster_fans().length > 0").fans
-
-   script(id="connect-fan-template", type="text/html")
-      li.fan
-         a(data-bind="attr: { 'href': profile_url }", data-transition="slide")
-            .image-wrap
-               img.profile-image(data-bind="attr: { 'src': profile_image_url }")
-               .cover
-            .fan-info
-               .name(data-bind="text: name")
-               .team(data-bind="text: team")
